ShoppingCart/shopping-cart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-cart-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: shoppingcart.microservice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopping-cart-int # deployment
            port: 
              number: 80
